engine/tests/fixtures/invalid/ui/shape-output-dummy.tg
shape shape_output_dummy {
  name "Dummy Output"
  description "Output for invalid UI tests"

  fields {
    id uuid required
    created_at datetime required
  }

  status active
}
